--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+PipPY_copy
+PipPY
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -110,6 +113,7 @@ ENV/
 env.bak/
 venv.bak/
 
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -127,3 +131,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#telegramm tokens
+bot_tokens
